--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en-GB">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>void217</title>
@@ -26,6 +23,13 @@
     </li>
     <li>
         <a href="https://myanimelist.net/profile/__undefined__" target="_blank">MyAnimeList</a>
+    </li>
+    <li>
+        <a href="https://www.goodreads.com/user/show/92638712-void" target="_blank">Goodreads</a>
+    </li>
+
+    <li>
+        <a href="https://reddit.com/u/RevolutionaryCatch5" target="_blank">Reddit</a>
     </li>
     <li>
         <a href="https://void217.github.io/blog">Blog</a>
